# ftqc-classical-cost

./: LICENSE  Makefile  README.md  constants.py  figures.py  model.py  pyproject.toml  style.py
scripts/: breakeven_ladder.py  latency_ladder.py  syndrome_bandwidth.py
